--- a/src/about.html
+++ b/src/about.html
@@ -3,39 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Página sobre nós do meu site.">
+    <meta name="description" content="Página sobre mim e meus valores.">
+    <title>Sobre - Meu Site Pessoal</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Sobre Nós</title>
+    <style>
+        body {
+            background: #f6f8fa;
+        }
+        .flat-card {
+            background: #fff;
+            border-radius: 18px;
+            box-shadow: 0 2px 16px rgba(0,0,0,0.04);
+            padding: 2.5rem 2rem;
+            margin-top: 2rem;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Início</a></li>
-                <li><a href="about.html">Sobre</a></li>
-                <li><a href="portfolio.html">Portfólio</a></li>
-                <li><a href="contact.html">Contato</a></li>
-            </ul>
-        </nav>
+    <header class="bg-primary text-white py-4 mb-4 shadow-sm">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary p-0">
+                <div class="container-fluid p-0">
+                    <a class="navbar-brand fw-bold" href="index.html">Jakki</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
+                            <li class="nav-item"><a class="nav-link active" href="about.html">Sobre</a></li>
+                            <li class="nav-item"><a class="nav-link" href="projetos.html">Projetos</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Contato</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </header>
     <main>
-        <h1>Sobre Nós</h1>
-        <p>Bem-vindo à nossa página! Aqui você encontrará informações sobre nossa missão, visão e valores.</p>
-        <h2>Nossa Missão</h2>
-        <p>Oferecer soluções inovadoras que atendam às necessidades dos nossos clientes.</p>
-        <h2>Nossa Visão</h2>
-        <p>Ser referência no mercado pela qualidade e excelência dos nossos serviços.</p>
-        <h2>Nossos Valores</h2>
-        <ul>
-            <li>Inovação</li>
-            <li>Qualidade</li>
-            <li>Transparência</li>
-            <li>Comprometimento</li>
-        </ul>
+        <section class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-9">
+                    <div class="flat-card">
+                        <h1 class="mb-4">Sobre Mim</h1>
+                        <p class="lead">Bem-vindo à minha página! Aqui você encontra informações sobre minha missão, visão e valores.</p>
+                        <h2 class="mt-4">Minha Missão</h2>
+                        <p>Oferecer soluções inovadoras que atendam às necessidades dos meus clientes e parceiros.</p>
+                        <h2 class="mt-4">Minha Visão</h2>
+                        <p>Ser referência no mercado pela qualidade e excelência dos meus serviços e projetos.</p>
+                        <h2 class="mt-4">Meus Valores</h2>
+                        <ul>
+                            <li>Inovação</li>
+                            <li>Qualidade</li>
+                            <li>Transparência</li>
+                            <li>Comprometimento</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer>
-        <p>&copy; 2023 Meu Site. Todos os direitos reservados.</p>
+    <footer class="bg-light text-center py-3 mt-5 border-top">
+        <div class="container">
+            <p class="mb-0 text-secondary">&copy; 2025 Jakki. Todos os direitos reservados.</p>
+        </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
