--- a/src/index.html
+++ b/src/index.html
@@ -5,29 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bem-vindo ao meu site pessoal, onde você pode conhecer mais sobre mim e meus projetos.">
     <title>Meu Site Pessoal</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+        
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Meu Site Pessoal</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Início</a></li>
-                <li><a href="about.html">Sobre</a></li>
-                <li><a href="portfolio.html">Portfólio</a></li>
-                <li><a href="contact.html">Contato</a></li>
-            </ul>
-        </nav>
+    <header class="bg-primary text-white py-4 mb-4 shadow-sm">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary p-0">
+                <div class="container-fluid p-0">
+                    <a class="navbar-brand fw-bold" href="index.html">Jakki</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item"><a class="nav-link active" href="index.html">Início</a></li>
+                            <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
+                            <li class="nav-item"><a class="nav-link" href="projetos.html">Projetos</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Contato</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </header>
     <main>
-        <section>
-            <h2>Bem-vindo!</h2>
-            <p>Este é o meu site pessoal, onde compartilho meus projetos e experiências.</p>
+        <section class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-10">
+                    <div class="flat-card row align-items-center">
+                        <div class="col-md-7 order-2 order-md-1">
+                            <h1 class="profile-title mb-2">Dev Jakki</h1>
+                            <div class="profile-subtitle mb-4">Desenvolvedor frontend</div>
+                            <p class="lead mb-4">Bem-vindo ao meu site pessoal! Aqui compartilho meus projetos, experiências e aprendizados no universo do desenvolvimento frontend.</p>
+                            <a href="projetos.html" class="btn btn-flat">Veja meus projetos</a>
+                        </div>
+                        <div class="col-md-5 text-center order-1 order-md-2 mb-4 mb-md-0">
+                            <img src="images/pessoa-comp.svg" alt="Foto" class="profile-img">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
-    <footer>
-        <p>&copy; 2025 Meu Nome. Todos os direitos reservados.</p>
+    <footer class="bg-light text-center py-3 mt-5 border-top">
+        <div class="container">
+            <p class="mb-0 text-secondary">&copy; 2025 Jakki. Todos os direitos reservados.</p>
+        </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
