feat: imagens do site

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
                             <a href="projetos.html" class="btn btn-flat">Veja meus projetos</a>
                         </div>
                         <div class="col-md-5 text-center order-1 order-md-2 mb-4 mb-md-0">
-                            <img src="images/pessoa-comp.svg" alt="Foto" class="profile-img">
+                            <img src="pessoa-comp.svg" alt="Foto" class="profile-img">
                         </div>
                     </div>
                 </div>
